kernels/channel/tests/should_pass/001_empty.js
module.exports = {
    state: {
        // no values to wrap
    },
    fn: ($) => {
        // nothing to do
    },
    _: {
        fn: [],
        subs: [],
        deps: {},  // no dependencies tracked
        cache: {}, // no values cached,
        fatal: {}
    }
}