kernels/channel/tests/should_fail/001_empty.js
module.exports = {
    state: {
        // no values to wrap
    },
    fn: ($) => {
        // nothing to do
    },
    _: {
        fn: ['rnd'],
        subs: [],
        deps: {},  // no dependencies tracked
        cache: {}, // no values cached,
        fatal: {}
    },
    should_fail: true
}